# zfs_beskar_key

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
scripts/: bootstrap.sh
src/: cmd.rs  config.rs  dracut.rs  main.rs  menu.rs  ui.rs  usb.rs  zfs.rs
src/cmd/: base.rs  doctor.rs  dracut_install.rs  init.rs  mod.rs  recover.rs  repair.rs  simulate.rs  unlock.rs
src/dracut/: mod.rs
src/dracut/templates/: beskar-load-key.conf  beskar-load-key.service  beskar-load-key.sh  beskar-mount.service  beskar-unlock.service  beskar-unlock.sh  module-setup.sh  run-beskar.mount  zfs-load-module.conf
src/util/: atomic.rs  audit.rs  binary.rs  kdf.rs  keyfile.rs  lockout.rs  mod.rs  recovery.rs
