[package]
name = "zfs_beskar_key"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
dialoguer = { version = "0.11", default-features = true }
indicatif = "0.17"
which = "6"
tempfile = "3.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
getrandom = "0.2"
