[package]
name = "zfs_beskar_key"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = "0.2"
colored = "2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
