[package]
name = "zfs_beskar_key"
version = "1.4.0"
edition = "2021"
authors = ["x4ngus"]
description = "ZFS Beskar Key: USB-first ZFS key management for the modern-day Bounty Hunter."
license = "MIT"
repository = "https://github.com/x4ngus/zfs_beskar_key"


[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = "0.2"
colored = "2.1"
crossterm = "0.27"
thiserror = "1"                                               # optional; not used above but recommended project‑wide
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
serde_yaml = "0.9"
toml = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
rand = { version = "0.8", features = ["std", "rand_chacha"] }
hex = "0.4"
atty = "0.2"
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"
sha2 = "0.10.9"
dialoguer = "0.11"
nanoid = "0.4"
qrcodegen = "1.8"
chrono = "0.4"
console = "0.15"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
